# personal-website

./: .gitignore  pyproject.toml  tsconfig.json
amplify/: team-provider-info.json
amplify/.config/: project-config.json
react/: package-lock.json  package.json
react/public/: index.html  manifest.json
react/src/: App.css  App.scss  App.tsx  AppContext.tsx  Arial-bold.ts  Arial.ts  config.ts  index.tsx  utils.ts
react/src/connected-components/: HomePage.tsx  ResumePage.tsx
react/src/stateless-components/: AppBar.tsx  ImAlsoA.tsx  IntroduceSelf.tsx  MyCareerGoal.tsx  MyCareerSoFar.tsx  MyStories.tsx  ResumeExperience.tsx  ResumeHeader.tsx  ResumeProject.tsx  ResumeSection.tsx  ResumeSkills.tsx  ResumeTemplate.tsx  SiteLayout.tsx  WhyConsiderMe.tsx  WhyHireMe.tsx
react/src/text/: company-keywords-map.ts  education.ts  employment.ts  interests.ts  projects.ts  rols.ts  skills-summary.ts  skills.ts  stories.ts  why-consider-me.ts
